# adsp.freesurround

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
adsp.freesurround/: addon.xml  addon.xml.in  changelog.txt
adsp.freesurround/resources/language/English/: strings.po
adsp.freesurround/resources/skins/skin.confluence/720p/: DialogMasterModeFreeSurround.xml
adsp.freesurround/resources/skins/skin.estouchy/xml/: DialogMasterModeFreeSurround.xml
adsp.freesurround/resources/skins/skin.estuary/1080i/: DialogMasterModeFreeSurround.xml
cmake/: addon-template-helpers.cmake
debian/: changelog  changelog.in  control  copyright  kodi-adsp-freesurround.install  rules
depends/common/kodi-platform/: kodi-platform.txt
depends/common/kodiplatform/: kodiplatform.txt
src/: ChannelMaps.cpp  ChannelMaps.h  DSPProcessFreeSurround.cpp  DSPProcessFreeSurround.h  FreeSurroundDecoder.cpp  FreeSurroundDecoder.h  FreeSurroundSettings.cpp  FreeSurroundSettings.h  GUIDialogFreeSurround.cpp  GUIDialogFreeSurround.h  addon.cpp  addon.h
src/kissfft/: TIPS  kiss_fft.cpp  kiss_fft.h
